# langchain

./: main.py  pyproject.toml
ch1/: 1_Basic.ipynb  main.py  main2.py  messages.py  prompts.py  structured_output.py
ch2/: chai_wit_custom_runable.py  chain1.py  chain_wit_custom_runable.py
